@@ -12,7 +12,7 @@ data conversion, ibis::table, ibis::part">
 </head>
 
 <body>
-<table cellspacing=0 border="0px" padding=0 width="100%" align=center>
+<table cellspacing=0 border="0px" cellpadding=2 width="100%" align=center>
 <tr>
 <td colspan=7 align=right border=0><A href="http://lbl.gov/~kwu/fastbit"><img class=noborder
 src="http://lbl.gov/~kwu/fastbit/fastbit.gif" alt="FastBit"></A>
@@ -511,6 +511,12 @@ longTests=true
 preferMMapIndex=1
 </pre>
 
+<p>
+Note, the source code distribution also distributes two very small sets
+of data for testing.  Some larger datasets are available on-line,
+<A HREF="http://sdm.lbl.gov/fastbit/data/samples.html">follow this link
+  to download these samples</A>.
+</p>
 <div class=footer>
 <a href="http://www.lbl.gov/Disclaimers.html">Disclaimers</a><br>
 <A HREF="http://lbl.gov/%7Ekwu/fastbit/">FastBit web site</A><br>
