@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<table cellspacing=0 border="0px" padding=0 width="100%" align=center>
+<table cellspacing=0 border="0px" cellpadding=2 width="100%" align=center>
 <tr>
 <td colspan=7 align=right border=0><A href="http://lbl.gov/~kwu/fastbit"><img class=noborder
 src="http://lbl.gov/~kwu/fastbit/fastbit.gif" alt="FastBit"></A>
