@@ -16,7 +16,7 @@ IBIS, WAH compression, Word-Aligned Hybrid, Wu">
 <LINK REL="SHORTCUT ICON" HREF="http://crd.lbl.gov/~kewu/fastbit/favicon.ico">
 </HEAD>
 <BODY>
-<table cellspacing=0 border="0px" padding=0 width="100%" align=center>
+<table cellspacing=0 border="0px" cellpadding=2 width="100%" align=center>
 <tr>
 <td colspan=7 align=right border=0><A href="http://lbl.gov/~kwu/fastbit"><img class=noborder
 src="http://lbl.gov/~kwu/fastbit/fastbit.gif" alt="FastBit"></A>
